syntax = "proto3";

package moby.exporter.v1;

option go_package = "github.com/moby/buildkit/session/exporter";

import "github.com/moby/buildkit/api/services/control/control.proto";

service Exporter {
	rpc FindExporters(FindExportersRequest) returns (FindExportersResponse);
}

message FindExportersRequest{
	map<string, bytes> metadata = 1;
	repeated string refs = 2;
}

message FindExportersResponse {
	repeated ExporterRequest exporters = 1;
}

message ExporterRequest {
	string Type = 1;
	map<string, string> Attrs = 2;
	moby.buildkit.v1.ExporterTarget Target = 3;
}
